# cdp-gdb-bridge

./: .eslintrc.js  .gitignore  .npmignore  .vscodeignore  .vscodeingore  CLI.md  Extension.md  LICENSE  README.md  build.bat  cdp-gdb-bridge-1.2.3.vsix  jest.config.json  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  webpack.config.js
.github/workflows/: node-ci.yml
crates/dwarf/: .npmignore  Cargo.toml  LICENSE  README.md
crates/dwarf/.cargo/: config.toml
crates/dwarf/src/: dwarf.rs  format.rs  lib.rs  wasm_bindings.rs
crates/dwarf/src/dwarf/: format.rs  sourcemap.rs  subroutine.rs  utils.rs  variables.rs  wasm_bindings.rs
src/: CommandReader.ts  DebugSession.ts  InterOp.ts  Source.ts  extension.ts  index.ts
src/cli/: CommandReader.ts  index.ts
src/core/: DebugAdapterInterface.ts  DebugCommand.ts  DebugSession.ts  DebugThread.ts  InterOp.ts  Source.ts
src/core/BreakPoint/: BreakPointsManager.ts
src/core/CDP/: CDPDebuggerApi.ts  CDPProxy.ts  CDPRuntimeApi.ts
src/core/DebugSessionState/: PausedDebugSessionState.ts  RunningDebugSessionState.ts
src/core/WebAssembly/: File.ts  FileRegistory.ts  InterOp.ts
src/tests/: statikk.d.ts
src/tests/core/: DebugAdapter.Chrome.spec.ts  DebugAdapter.spec.ts
src/tests/emscripten-pthread-app/: DebugAdapter.Chrome.spec.ts  DebugAdapter.spec.ts
src/vscode/: dapServer.ts  dapServerLauncher.ts  extension.ts
tests/app/: Main.js  main.js  main.wasm
tests/emscripten-pthread-app/: Main.html  Main.js  Main.wasm  Main.worker.js
tests/emscripten-simple-app/: Main.cpp  Main.js  Main.wasm
(+2 files in other folders)
