[package]
name = "wasm-dwarf-alanyser"
version = "0.1.0"
authors = ["kamenokonokotan <kamenokonokotan@gmail.com>"]
edition = "2018"
description = "WebAssembly DWARF alanyser"
license = "MIT"
repository = "https://github.com/nokotan/cdp-gdb-bridge"

[dependencies]
wasm-bindgen = "0.2.75"
js-sys = "*"
gimli = "0.25.0"
object = { version = "0.26", features = ["wasm"] }
anyhow = "1.0.26"
num-bigint = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
